--- a/angular.json
+++ b/angular.json
@@ -22,13 +22,13 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "../node_modules/ngf-bootstrap/dist/bootstrap.min.css",
+            "styles": [        
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/ngx-toastr/toastr.css"
             ]
           },
           "configurations": {
