--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "ng-toast": "^2.0.0",
     "ngf-bootstrap": "0.0.5",
+    "ngx-toastr": "^10.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
