--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "ionic": "^5.4.1",
     "ng-toast": "^2.0.0",
     "ngf-bootstrap": "0.0.5",
     "ngx-toastr": "^10.2.0",
