--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.config.json",
+    "poststart": "npm run start",
     "build": "ng build",
+    "postbuild": "npm run start",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "node node_modules/ngf-server/server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -24,6 +27,7 @@
     "ionic": "^5.4.1",
     "ng-toast": "^2.0.0",
     "ngf-bootstrap": "0.0.5",
+    "ngf-server": "^1.0.2",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
